fix: reduced spacing when viewing on mobile

--- a/src/pages/trips/ViewTrip.module.css
+++ b/src/pages/trips/ViewTrip.module.css
@@ -1,28 +1,10 @@
-.tabsList {
-  &::before {
-    display: none;
-  }
-}
-
-.tab {
-  font-weight: 500;
-  height: rem(38);
-  background-color: transparent;
-  position: relative;
-  bottom: -1px;
-
-  &::before,
-  &::after {
-    background-color: light-dark(var(--mantine-color-gray-2), var(--mantine-color-dark-7)) !important;
-  }
-
-  &:hover {
-    background-color: light-dark(var(--mantine-color-gray-1), var(--mantine-color-dark-5));
-  }
-
-  &[data-active] {
-    background-color: light-dark(var(--mantine-color-white), var(--mantine-color-dark-7));
-    border-color: light-dark(var(--mantine-color-gray-2), var(--mantine-color-dark-7));
-    /*border-bottom-color: transparent;*/
+:global(.mantine-Accordion-panel) {
+  container-type: inline-size;
+  :global(.mantine-Accordion-content) {
+    padding: var(--mantine-spacing-xs);
+    @container (width < 50em) {
+      /*background-color: var(--mantine-color-red-filled);*/
+      padding: 0px;
+    }
   }
 }
